WIP: Fixes, debug